fixed invisible logout && redirect mainpage after logout

--- a/DYID/public/css/app.css
+++ b/DYID/public/css/app.css
@@ -3151,7 +3151,7 @@ input[type=button].btn-block {
   padding: 0.25rem 1.5rem;
   clear: both;
   font-weight: 400;
-  color: #212529;
+  color: #212529 !important;
   text-align: inherit;
   white-space: nowrap;
   background-color: transparent;
@@ -3163,7 +3163,8 @@ input[type=button].btn-block {
   background-color: #e9ecef;
 }
 .dropdown-item.active, .dropdown-item:active {
-  color: #fff;
+  /* color: #fff; */
+  color: black;
   text-decoration: none;
   background-color: #3490dc;
 }
